--- a/Warbler_app/warbler-client/src/index.css
+++ b/Warbler_app/warbler-client/src/index.css
@@ -1,5 +1,6 @@
 body {
   margin: 0;
+  background-color: #e6ecf0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -10,4 +11,35 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.navbar{
+  margin-bottom: 1rem;
+}
+
+.navbar a{
+  font-weight:bold;
+  color:white;
+}
+.navbar a:hover{
+  color:white;
+  text-decoration: underline;
+  cursor: pointer;
+}
+
+.navbar-brand > img{
+  display:inline-block;
+  width:20px;
+  margin-bottom:2px;
+  margin-right: 5px;
+  border-radius: 2px;
+}
+
+ul.nav.navbar-nav li{
+  margin:0 0.5rem;
+}
+
+.onboarding > .navbar{
+  background-image:url("./images/nav-bg.png");
+  background-size: 100% 100%;
 }
