Login complete :smiley:

--- a/Warbler_app/warbler-client/src/index.css
+++ b/Warbler_app/warbler-client/src/index.css
@@ -43,3 +43,23 @@ ul.nav.navbar-nav li{
   background-image:url("./images/nav-bg.png");
   background-size: 100% 100%;
 }
+
+.home-hero{
+  width:100vw;
+  height: 100vh;
+  position: absolute;
+  top:0;
+  left:0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background-image: url("./images//signed-out-home.jpg");
+  z-index: -1;
+  text-align: center;
+  padding:1rem;
+  background-size: cover;
+  background-position: center center;
+  color:#fff;
+  text-shadow: 0 0 8px #66757f;
+}
