--- a/Warbler_app/warbler-client/src/index.css
+++ b/Warbler_app/warbler-client/src/index.css
@@ -1,65 +1,87 @@
 body {
-  margin: 0;
   background-color: #e6ecf0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
+/* Nav */
 
-.navbar{
+.navbar {
   margin-bottom: 1rem;
 }
 
-.navbar a{
-  font-weight:bold;
-  color:white;
+.navbar a {
+  font-weight: bold;
+  color: white;
 }
-.navbar a:hover{
-  color:white;
+
+.navbar a:hover {
+  color: white;
   text-decoration: underline;
   cursor: pointer;
 }
 
-.navbar-brand > img{
-  display:inline-block;
-  width:20px;
-  margin-bottom:2px;
+.navbar-brand > img {
+  display: inline-block;
+  width: 20px;
+  margin-bottom: 2px;
   margin-right: 5px;
   border-radius: 2px;
 }
 
-ul.nav.navbar-nav li{
-  margin:0 0.5rem;
+ul.nav.navbar-nav li {
+  margin: 0 0.5rem;
 }
 
-.onboarding > .navbar{
-  background-image:url("./images/nav-bg.png");
+.onboarding > .navbar {
+  background-image: url("./images/nav-bg.png");
   background-size: 100% 100%;
 }
 
-.home-hero{
-  width:100vw;
+.home-hero {
+  width: 100vw;
   height: 100vh;
   position: absolute;
-  top:0;
-  left:0;
+  top: 0;
+  left: 0;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  background-image: url("./images//signed-out-home.jpg");
   z-index: -1;
+  background-image: url("./images/signed-out-home.jpg");
   text-align: center;
-  padding:1rem;
-  background-size: cover;
+  padding: 1rem;
   background-position: center center;
-  color:#fff;
+  background-size: cover;
+  color: #fff;
   text-shadow: 0 0 8px #66757f;
+}
+
+#messages .list-group-item {
+  display: flex;
+  align-items: flex-start;
+  padding: 7px 20px 12px;
+}
+
+#messages:not(.no-hover) .list-group-item:hover {
+  background-color: #e6ecf0;
+}
+
+.timeline-image {
+  border-radius: 50px;
+  height: 48px;
+  width: 48px;
+  margin: 2px 30px 10px 10px;
+}
+
+.btn:hover {
+  cursor: pointer;
+}
+
+a.btn.btn-danger,
+a.btn.btn-danger:hover {
+  color: white;
+}
+
+.navbar-header {
+  margin: 0 auto;
 }
